trying to fix background image load on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,14 +6,10 @@
  body, html {
      height: 100%;
      position: fixed;
- }
-
- body {
      background-image: url("../images/background-image.jpg");
      background-attachment: fixed;
-     /* background-color: rgba(0, 0, 0, 1); */
      background-position: center;
-     background-size: cover;
+     background-size: 100% cover;
      background-repeat: no-repeat;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  }
@@ -244,6 +240,6 @@
 
  @media only screen and (max-width: 480px) {
      body {
-         background-image: url("../images/luca-bravo-9l_326FISzk-unsplash.jpg") no-repeat 50% 0;
+         background-image: url("../images/background-image.jpg") no-repeat 50% 0;
      }
  }
